> added project logos and descriptions > improved visibility of buttons and text boxes > fixed resume implementation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,6 +299,11 @@ input, select, textarea {
 		align-items: stretch;
 	}
 
+	.row img {
+		width: 800px;
+		height: 300px;
+	}
+
 		.row > * {
 			box-sizing: border-box;
 		}
@@ -1030,6 +1035,7 @@ input, select, textarea {
 				flex-wrap: wrap;
 				box-sizing: border-box;
 				align-items: stretch;
+				margin-top: 0
 			}
 
 				.row > * {
@@ -1819,7 +1825,7 @@ input, select, textarea {
 		appearance: none;
 		background: #f7f7f7;
 		border-radius: 0.35em;
-		border: solid 2px transparent;
+		border: solid 2px #1f1815;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -1977,14 +1983,14 @@ input, select, textarea {
 		opacity: 1.0;
 	}
 
-/* Box */
+	/* Box */
 
-	.box {
-		border-radius: 0.35em;
-		border: solid 2px #efefef;
-		margin-bottom: 2em;
-		padding: 1.5em;
-	}
+		.box {
+			border-radius: 0.35em;
+			border: solid 2px #efefef;
+			margin-bottom: 2em;
+			padding: 1.5em;
+		}
 
 		.box > :last-child,
 		.box > :last-child > :last-child,
@@ -1998,13 +2004,13 @@ input, select, textarea {
 			padding: 0;
 		}
 
-/* Icon */
+	/* Icon */
 
-	.icon {
-		text-decoration: none;
-		border-bottom: none;
-		position: relative;
-	}
+		.icon {
+			text-decoration: none;
+			border-bottom: none;
+			position: relative;
+		}
 
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
@@ -2035,14 +2041,14 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
-/* Image */
+	/* Image */
 
-	.image {
-		border-radius: 0.35em;
-		border: 0;
-		display: inline-block;
-		position: relative;
-	}
+		.image {
+			border-radius: 0.35em;
+			border: 0;
+			display: inline-block;
+			position: relative;
+		}
 
 		.image:before {
 			-moz-transition: opacity 0.2s ease-in-out;
@@ -2445,7 +2451,7 @@ input, select, textarea {
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 0.35em;
-		border: solid 3px #efefef;
+		border: solid 2px #1f1815;
 		color: #787878 !important;
 		cursor: pointer;
 		display: inline-block;
@@ -2719,8 +2725,8 @@ input, select, textarea {
 
 		#main > section {
 			border-top: solid 2px #efefef;
-			margin: 4em 0 0 0;
-			padding: 4em 0 0 0;
+			margin: 0 0 0 0;
+			padding: 1em 0 0 0;
 		}
 
 			#main > section:first-child {
@@ -3294,15 +3300,10 @@ input, select, textarea {
 				white-space: nowrap;
 			}
 
-			.skills:hover .skills-slideshow {
-				animation-play-state: paused;
-			}
-
 			.skills-slideshow {
 				display: inline-block;
 				animation: 30s slide infinite linear;
 			}
-
 
 			.skills-slideshow img {
 				height: 100px;
